--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,16 @@ li{
     text-align: center;
     padding: 30px;
 }
+.add-item-area input{
+    height: 30px;
+    padding: 10px 15px;
+    border-radius: 10px;
+}
+.add-item-area button{
+    background: teal;
+    height: 30px;
+    color: #fff;
+    border-radius: 10px;
+    padding: 5px;
+    border-color: teal;
+}
