--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,18 @@
 }
 /* end utility */
 
+h1{
+    text-align: center;
+    margin: 20px;
+    font-family: sans-serif;
+    font-size: 40px;
+}
 .list-container{
     padding: 40px;
     border-radius: 10px;
     background: #f5f6f7;
     max-width: 1200px;
-    margin: 40px auto;
+    margin: 20px auto;
 }
 ul{
     list-style: none;
@@ -42,4 +48,7 @@ li{
     border-radius: 10px;
     padding: 5px;
     border-color: teal;
+}
+.check-simbol{
+    color: teal
 }
